Fix alignment of list items

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ h3 {
 	font-size: 32px;
 }
 
-ul, ol {
+ol, ul {
 	display: inline-block;
+}
+
+li {
+	text-align: left;
 }
